# Gradia

./: .gitignore  Gradia.flatpak  README.md  TRANSLATING.md  be.alexandervanhee.gradia.flathub.json  be.alexandervanhee.gradia.json  io.github.AlexanderVanhee.Gradia.flathub.json  io.github.AlexanderVanhee.Gradia.json  io.github.AlexanderVanhee.Gradia.json~  meson.build  pyproject.toml  requirements.txt
.github/workflows/: build.yml  web.yml
build-aux/flatpak/: be.alexandervanhee.gradia.json  pypi-dependencies.json
data/: be.alexandervanhee.gradia.desktop.in  be.alexandervanhee.gradia.desktop.in.in  be.alexandervanhee.gradia.gschema.xml  be.alexandervanhee.gradia.metainfo.xml.in  be.alexandervanhee.gradia.metainfo.xml.in.in  be.alexandervanhee.gradia.service.in  gradia.gresource.xml.in  help.txt  io.github.AlexanderVanhee.Gradia.desktop.in  io.github.AlexanderVanhee.Gradia.gschema.xml  io.github.AlexanderVanhee.Gradia.metainfo.xml.in  io.github.AlexanderVanhee.Gradia.service.in  meson.build  resources.data.gresource.xml.in  style.css
data/icons/: meson.build
data/images/: preset1.avif  preset2.avif  preset3.avif  preset4.avif  preset5.avif  preset6.avif
data/ui/: app_menu.blp  background_selector.blp  controls_overlay.blp  drawing_tools_group.blp  gradient_selector.blp  header_bar.blp  home_bar.blp  image_sidebar.blp  image_stack.blp  main_window.blp  meson.build  recent_picker.blp  text_entry_popover.blp  welcome_page.blp
data/ui/selectors/: image_selector.blp  solid_selector.blp
gradia/: app_constants.py  clipboard.py  constants.in  gradia.in  main.py  meson.build
gradia/backend/: logger.py  settings.py
gradia/graphics/: background.py  gradient.py  image.py  image_processor.py  solid.py  text.py
gradia/overlay/: drawing_actions.py  drawing_overlay.py  text_entry_popover.py  transparency_overlay.py
gradia/ui/: background_selector.py  drawing_actions.py  drawing_overlay.py  drawing_tools_group.py  image_exporters.py  image_loaders.py  image_sidebar.py  image_stack.py  recent_picker.py  ui_parts.py  welcome_page.py  window.py
gradia/utils/: colors.py
po/: LINGUAS  POTFILES.in  de.po  fr.po  gradia.pot  meson.build  nl.po  oc.po  pl.po  pt_BR.po  ru.po  uk.po
scripts/: update-po.sh
src/: background.py  clipboard.py  gradia.gresource.xml  gradia.in  gradient.py  image_processor.py  main.py  meson.build  solid.py  ui.py  ui_parts.py
src/graphics/: background.py  gradient.py  gradient_gen.c  image_processor.py  text.py
src/ui/: image_exporters.py  image_loaders.py  misc.py  ui_parts.py  window.py
web/: index.html  styles.css
